command install README.md